--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=WindSong:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <audio autoplay loop>
+        <source src="bg_music.mp3" type="audio/mpeg">
+    </audio>
 </head>
 <body>
+    <!-- <video autoplay loop muted class="bg_video">
+        <source src="bg_video.mp4" ></source>
+    </video> -->
     <header>
         <div>
             <img src="logo.png" alt="ISCP LOGO">
@@ -37,12 +43,13 @@
                 <label for="student_id">PARENTS # : </label>
                 <input type="number" id="parents_number">
                 <br><br>
-                <label for="signature">SIGNATURE : </label>
+                <label for="signature">SIGNATURE TEXT : </label>
                 <input type="text" id="signature">
                 <br><br>
                 <label for="bachelor">BS : </label>
                 <input type="text" id="bs">
-                <br>
+                <br><br><br>
+                <p class="note">Note : Signature must be less than 15 characters and BS must be less than 32 characters.</p>
 
                 <button class="createIdBtn">CREATE ID</button>
             </div>
@@ -97,7 +104,7 @@
                 <div class="id_description_back">
                     <p>This is to certify that the person whose picture and signature appear here on is a student of the International State College of the Phillipines - Main Campus.</p>
                     <br>
-                    <p>This card is NON-TRANFERABLE and Valid only for the stated school year.</p>
+                    <p>This card is NON-TRANSFERABLE and Valid only for the stated school year.</p>
                     <br>
                     <p>Loss of this card must be reported to Registrar.</p>
 
