Update bg viedo

--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
     </audio>
 </head>
 <body>
-    <!-- <video autoplay loop muted class="bg_video">
-        <source src="bg_video.mp4" ></source>
-    </video> -->
+    <div class="bg_video_wrapper">
+        <video autoplay loop muted >
+            <source src="bg_video.mp4" ></source>
+        </video>
+    </div>
+    
     <header>
         <div>
             <img src="logo.png" alt="ISCP LOGO">
