--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=WindSong:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <audio autoplay loop>
+    <!-- <audio autoplay loop>
         <source src="bg_music.mp3" type="audio/mpeg">
-    </audio>
+    </audio> -->
 </head>
 <body>
+    <iframe src="bg_music.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
     <div class="bg_video_wrapper">
         <video autoplay loop muted >
             <source src="bg_video.mp4" ></source>
