Update add music and iscp bg video

--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
     </audio> -->
 </head>
 <body>
-    <iframe src="bg_music.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
+    <!-- <iframe src="bg_music.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe> -->
     
     <div class="bg_video_wrapper">
-        <video autoplay loop muted >
-            <source src="bg_video.mp4" ></source>
+        <video autoplay loop muted>
+            <source class="src_bg" src="bg_video_1.mp4" ></source>
         </video>
+        <audio autoplay>
+            <source src="bg_music.mp3">
+        </audio>
     </div>
     
     <header>
